--- a/source/sass/blocks/nav.scss
+++ b/source/sass/blocks/nav.scss
@@ -5,7 +5,7 @@
   background-color: $bg-nav;
   box-shadow: $shadow-nav;
   box-sizing: border-box;
-  z-index: 2;
+  z-index: 6;
 
   @media (min-width: $viewport-mid) {
     position: fixed;
