--- a/source/sass/blocks/profile.scss
+++ b/source/sass/blocks/profile.scss
@@ -20,7 +20,7 @@
     min-width: 480px;
     max-height: 675px;
     box-shadow: $shadow-profile;
-    z-index: 2;
+    z-index: 7;
   }
 }
 
